2009-03-17  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* auxbuf.h (tino_auxbuf_clearOn): this now does work
	(tino_auxbufOn): added length support and AUXBUF nulling if first
	initialized

	* scale.h (tino_scale_number): no scaling if at 0, so 0 stays 0.
	Anything not zero (very small) becomes 0.0

2009-02-04  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* privilege.h (tino_privilege_end_elevationE): errors added and
	naming convention

	* hup.h: Naming convention
	* hup.h (struct tino_hup_global): global variables moved into
	hidden struct

2009-02-01  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* data.h (tino_data_write_xmlA): added
	(tino_data_write_c_escapeA): added

2009-01-31  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* data.h (tino_data_puts_escapeA): tino_data_write_escapeA renamed

2009-01-27  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* shit.h (shit_mode): Only one single argument for IO fd, usually
	keeps stdout/stderr free to use.

2009-01-12  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* buf.h (tino_buf_resetO): now returns pointer to buffer for easy
	chaining.

2009-01-10  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* type.h: changed to stdint (C99), as this shall be easily supported even
	on C89 compilers

2009-01-06  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* xd.h (tino_xd_init, tino_xd_flush, tino_xd_do, tino_xd_exit): added

2008-11-04  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* alloc.h (tino_alloc_align_size_n): added

2008-11-03  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* sock_tool.h (tino_sock_wrapO): Bugfix on dupping wrapped fd to
	/dev/null.

2008-11-02  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* scale.h (tino_scale_number): bugfix in number scaling: In
	certain (most common) situations one digit too much was rendered.

	* getopt.h (tino_getopt_usage): TINO_GETOPT_TYPE_IGNORE now no
	more output on help

2008-10-30  Valentin Hilbig  <tino@zoo.03.softkill.net>

	* buf.h (TINO_BUF_INC): added
