@@ -7,6 +7,10 @@
 	* scale.h (tino_scale_number): no scaling if at 0, so 0 stays 0.
 	Anything not zero (very small) becomes 0.0
 
+2009-03-02  Valentin Hilbig  <tino@firebird.03.softkill.net>
+
+	* proc.h (tino_wait_child_p): spurious compile time warning removed
+
 2009-02-04  Valentin Hilbig  <tino@zoo.03.softkill.net>
 
 	* privilege.h (tino_privilege_end_elevationE): errors added and
